<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        android:elevation="50dp"

        tools:context=".storyyyyyy_Test_Activity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/collapsingtb_bg">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:text="Princess Ariel"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center|end"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/st"
                    app:layout_collapseMode="parallax" />

            </androidx.appcompat.widget.LinearLayoutCompat>





<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="236dp">-->

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:background="@drawable/collapsingtb_bg"/>-->




<!--                </androidx.cardview.widget.CardView>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:background="@drawable/layout_collasp_bg">



                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/home_btn"
                    android:layout_width="wrap_content"
                    android:elevation="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="#F68DB1"
                    android:baselineAlignBottom="false"
                    android:clickable="true"
                    android:src="@drawable/ic_baseline_home_24"
                    app:fabSize="normal"
                    app:layout_anchorGravity="end|bottom" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:paddingTop="20dp"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:text="@string/story_Princess"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textSize="24sp"
                    android:paddingTop="20dp"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:textColor="@color/white"
                    android:text="@string/story_Princess2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textSize="24sp"
                    android:paddingTop="20dp"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:textColor="@color/white"
                    android:text="@string/story_Princess3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textSize="24sp"
                    android:paddingTop="20dp"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:textColor="@color/white"
                    android:text="@string/story_Princess4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textSize="24sp"
                    android:paddingTop="20dp"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:textColor="@color/white"
                    android:text="@string/story_Princess5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textSize="24sp"
                    android:paddingTop="20dp"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:textColor="@color/white"
                    android:text="@string/story_Princess6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textSize="30sp"
                    android:paddingTop="40dp"
                    android:paddingRight="100dp"
                    android:textStyle="bold"
                    android:paddingLeft="130dp"
                    android:textColor="@color/white"
                    android:text="-The End-"/>

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/stooo"
                    app:layout_collapseMode="parallax" />

            </LinearLayout>





            </LinearLayout>

    </ScrollView>
